--- a/js-vivaldi-master/style.css
+++ b/js-vivaldi-master/style.css
@@ -41,19 +41,19 @@ button {
     border: 2px solid #990100;
 }
 
-.springBtn {
+#springBtn {
     background-color: #0E94D1;
 }
 
-.summerBtn {
+#summerBtn {
     background-color: #1BA848;
 }
 
-.autumnBtn {
+#autumnBtn {
     background-color: #FE6732;
 }
 
-.winterBtn {
+#winterBtn {
     background-color: #1C64B9;
 }
 
